--- a/ci/docker/ubuntu/Dockerfile
+++ b/ci/docker/ubuntu/Dockerfile
@@ -4,17 +4,16 @@ FROM ubuntu:rolling AS env
 LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
-RUN apt-get update -qq \
-&& apt-get install -yq git wget libssl-dev build-essential \
+RUN apt-get update -q \
+&& DEBIAN_FRONTEND=noninteractive apt-get install -yq git wget libssl-dev build-essential \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
-# Install CMake 3.18.1
-RUN wget "https://cmake.org/files/v3.18/cmake-3.18.1-Linux-x86_64.sh" \
-&& chmod a+x cmake-3.18.1-Linux-x86_64.sh \
-&& ./cmake-3.18.1-Linux-x86_64.sh --prefix=/usr/local/ --skip-license \
-&& rm cmake-3.18.1-Linux-x86_64.sh
-CMD [ "/bin/sh" ]
+# Install CMake 3.19.2
+RUN wget "https://cmake.org/files/v3.19/cmake-3.19.2-Linux-x86_64.sh" \
+&& chmod a+x cmake-3.19.2-Linux-x86_64.sh \
+&& ./cmake-3.19.2-Linux-x86_64.sh --prefix=/usr/local/ --skip-license \
+&& rm cmake-3.19.2-Linux-x86_64.sh
 
 FROM env AS devel
 WORKDIR /home/project
@@ -29,6 +28,7 @@ RUN cmake --build build --target install -v
 FROM build AS test
 RUN cmake --build build --target test
 
+# Test install rules
 FROM env AS install_env
 COPY --from=build /usr/local /usr/local/
 
