Revert "ci: Try to fix alpine docker"
This reverts commit 9dd8618dc8925f9000f056978b196230e8d51bec.

--- a/ci/docker/alpine/Dockerfile
+++ b/ci/docker/alpine/Dockerfile
@@ -4,7 +4,7 @@ FROM alpine:edge AS env
 LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
-RUN apk add --no-cache git build-base linux-headers cmake musl=1.2.2_pre6-r0
+RUN apk add --no-cache git build-base linux-headers cmake
 
 # Add the library src to our build env
 FROM env AS devel
