--- a/.github/workflows/vagrant.yml
+++ b/.github/workflows/vagrant.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   # Only macos runner provide virtualisation with vagrant/virtualbox installed.
   freebsd:
-    runs-on: macos-latest
+    runs-on: macos-10.15
     steps:
     - uses: actions/checkout@v2
     - name: vagrant version
