--- a/ci/docker/opensuse/Dockerfile
+++ b/ci/docker/opensuse/Dockerfile
@@ -1,6 +1,6 @@
 # Create a virtual environment with all tools installed
-# ref: https://hub.docker.com/r/opensuse/tumbleweed
-FROM opensuse/tumbleweed AS env
+# ref: https://hub.docker.com/r/opensuse/leap
+FROM opensuse/leap AS env
 LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
