--- a/Bar/CMakeLists.txt
+++ b/Bar/CMakeLists.txt
@@ -15,9 +15,7 @@ set_target_properties(Bar PROPERTIES
 #target_link_libraries(Bar PUBLIC ...)
 add_library(${PROJECT_NAME}::Bar ALIAS Bar)
 
-if(BUILD_TESTING)
-  add_subdirectory(test)
-endif()
+add_subdirectory(tests)
 
 # Install
 include(GNUInstallDirs)
