--- a/ci/vagrant/freebsd/Vagrantfile
+++ b/ci/vagrant/freebsd/Vagrantfile
@@ -55,6 +55,7 @@ Vagrant.configure("2") do |config|
   config.vm.provision "file", source: "../../../Bar", destination: "$HOME/project/"
   config.vm.provision "file", source: "../../../FooBar", destination: "$HOME/project/"
   config.vm.provision "file", source: "../../../FooBarApp", destination: "$HOME/project/"
+  config.vm.provision "file", source: "../../../examples", destination: "$HOME/project/"
 
   # Provider-specific configuration so you can fine-tune various
   # backing providers for Vagrant. These expose provider-specific options.
