--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -3,6 +3,6 @@ if(NOT BUILD_EXAMPLES)
 endif()
 
 file(GLOB CPP_SRCS "*.cpp")
-foreach(EXAMPLE IN LISTS CPP_SRCS)
-  add_cpp_example(${EXAMPLE})
+foreach(FILE_NAME IN LISTS CPP_SRCS)
+  add_cpp_example(${FILE_NAME})
 endforeach()
