--- a/.github/workflows/amd64_macos.yml
+++ b/.github/workflows/amd64_macos.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Check cmake
       run: cmake --version
     - name: Configure
-      run: cmake -S. -Bbuild -G "Xcode" -DCMAKE_CONFIGURATION_TYPES=Release
+      run: cmake -S. -Bbuild -G "Xcode"
     - name: Build
       run: cmake --build build --config Release --target ALL_BUILD -v
     - name: Test
