--- a/.github/workflows/amd64_windows.yml
+++ b/.github/workflows/amd64_windows.yml
@@ -9,15 +9,17 @@ on:
 
 jobs:
   # Building using the github runner environement directly.
-  build-windows:
+  visual-studio:
     runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Check cmake
+      run: cmake --version
     - name: Configure
       run: cmake -S. -Bbuild -G "Visual Studio 16 2019" -DCMAKE_CONFIGURATION_TYPES=Release
     - name: Build
-      run: cmake --build build --config Release --target ALL_BUILD -- /maxcpucount
+      run: cmake --build build --config Release --target ALL_BUILD -v
     - name: Test
-      run: cmake --build build --config Release --target RUN_TESTS -- /maxcpucount
+      run: cmake --build build --config Release --target RUN_TESTS -v
     - name: Install
-      run: cmake --build build --config Release --target INSTALL -- /maxcpucount
+      run: cmake --build build --config Release --target INSTALL -v
