--- a/ci/docker/centos/Dockerfile
+++ b/ci/docker/centos/Dockerfile
@@ -5,16 +5,10 @@ LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
 RUN dnf -y update \
-&& dnf -y install git wget openssl-devel \
+&& dnf -y install git wget openssl-devel cmake \
 && dnf -y groupinstall "Development Tools" \
 && dnf clean all \
 && rm -rf /var/cache/dnf
-
-# Install CMake 3.19.2
-RUN wget "https://cmake.org/files/v3.19/cmake-3.19.2-Linux-x86_64.sh" \
-&& chmod a+x cmake-3.19.2-Linux-x86_64.sh \
-&& ./cmake-3.19.2-Linux-x86_64.sh --prefix=/usr/local/ --skip-license \
-&& rm cmake-3.19.2-Linux-x86_64.sh
 
 # Add the library src to our build env
 FROM env AS devel
