--- a/ci/docker/debian/Dockerfile
+++ b/ci/docker/debian/Dockerfile
@@ -5,15 +5,9 @@ LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
 RUN apt-get update -qq \
-&& apt-get install -yq git wget libssl-dev build-essential \
+&& apt-get install -yq git wget libssl-dev build-essential cmake \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
-
-# Install CMake 3.19.2
-RUN wget "https://cmake.org/files/v3.19/cmake-3.19.2-Linux-x86_64.sh" \
-&& chmod a+x cmake-3.19.2-Linux-x86_64.sh \
-&& ./cmake-3.19.2-Linux-x86_64.sh --prefix=/usr/local/ --skip-license \
-&& rm cmake-3.19.2-Linux-x86_64.sh
 
 # Add the library src to our build env
 FROM env AS devel
