--- a/.github/workflows/amd64_windows.yml
+++ b/.github/workflows/amd64_windows.yml
@@ -10,7 +10,7 @@ on:
 jobs:
   # Building using the github runner environement directly.
   visual-studio:
-    runs-on: windows-latest
+    runs-on: windows-2022
     steps:
     - uses: actions/checkout@v2
     - name: Check cmake
