--- a/ci/docker/centos/Dockerfile
+++ b/ci/docker/centos/Dockerfile
@@ -1,6 +1,6 @@
 # Create a virtual environment with all tools installed
-# ref: https://hub.docker.com/_/centos
-FROM centos:latest AS env
+# ref: https://quay.io/repository/centos/centos
+FROM quay.io/centos/centos:stream AS env
 LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
@@ -9,6 +9,7 @@ RUN dnf -y update \
 && dnf -y groupinstall "Development Tools" \
 && dnf clean all \
 && rm -rf /var/cache/dnf
+CMD [ "/usr/bin/bash" ]
 
 # Add the library src to our build env
 FROM env AS devel
