--- a/.github/workflows/amd64_windows.yml
+++ b/.github/workflows/amd64_windows.yml
@@ -1,16 +1,11 @@
 name: amd64 Windows
 
-on:
-  push:
-  pull_request:
-  schedule:
-    # min hours day(month) month day(week)
-    - cron: '0 0 7,22 * *'
+on: [push, pull_request]
 
 jobs:
   # Building using the github runner environement directly.
   visual-studio:
-    runs-on: windows-2022
+    runs-on: windows-latest
     steps:
     - uses: actions/checkout@v2
     - name: Check cmake
