ci: remove cron
note: after 60 days job is disabled even for regular push and pull request.

--- a/.github/workflows/amd64_freebsd.yml
+++ b/.github/workflows/amd64_freebsd.yml
@@ -1,11 +1,6 @@
 name: amd64 FreeBSD
 
-on:
-  push:
-  pull_request:
-  schedule:
-    # min hours day(month) month day(week)
-    - cron: '0 0 7,22 * *'
+on: [push, pull_request]
 
 jobs:
   # Only macos runner provide virtualisation with vagrant/virtualbox installed.
