--- a/.github/workflows/aarch64_docker.yml
+++ b/.github/workflows/aarch64_docker.yml
@@ -1,12 +1,7 @@
 # ref: https://github.com/docker-library/official-images
 name: aarch64 Docker
 
-on:
-  push:
-  pull_request:
-  schedule:
-    # min hours day(month) month day(week)
-    - cron: '0 0 7,22 * *'
+on: [push, pull_request]
 
 jobs:
   Distros:
