--- a/.github/workflows/mips_toolchain.yml
+++ b/.github/workflows/mips_toolchain.yml
@@ -1,11 +1,6 @@
 name: mips Toolchain
 
-on:
-  push:
-  pull_request:
-  schedule:
-    # min hours day(month) month day(week)
-    - cron: '0 0 7,22 * *'
+on: [push, pull_request]
 
 jobs:
   # Building using the github runner environement directly.
