tools: rework ppc management
support 440fp AND e500mc

--- a/.github/workflows/powerpc_toolchain.yml
+++ b/.github/workflows/powerpc_toolchain.yml
@@ -9,7 +9,8 @@ jobs:
     strategy:
       matrix:
         targets: [
-          [ppc],
+          [ppc-440fp],
+          [ppc-e500mc],
           [ppc64],
           [ppc64le],
         ]
