tools: Add riscv support

--- a/ci/Makefile
+++ b/ci/Makefile
@@ -95,6 +95,8 @@ help:
 	@echo -e "\t\t${BOLD}ppc-e500mc${RESET} (bootlin toolchain)"
 	@echo -e "\t\t${BOLD}ppc64${RESET} (bootlin toolchain)"
 	@echo -e "\t\t${BOLD}ppc64le${RESET} (bootlin toolchain)"
+	@echo -e "\t\t${BOLD}riscv32${RESET} (bootlin toolchain)"
+	@echo -e "\t\t${BOLD}riscv64${RESET} (bootlin toolchain)"
 	@echo -e "\t\t${BOLD}s390x${RESET} (bootlin toolchain)"
 	@echo
 	@echo -e "\tWith ${BOLD}<toolchain_stage>${RESET}:"
@@ -282,6 +284,7 @@ TOOLCHAIN_TARGETS = \
  aarch64 aarch64be \
  ppc-440fp ppc-e500mc \
  ppc64 ppc64le \
+ riscv32 riscv64 \
  s390x
 TOOLCHAIN_STAGES = env devel build test
 
