ci: add arm64 workflow

--- a/.github/workflows/aarch64_toolchain.yml
+++ b/.github/workflows/aarch64_toolchain.yml
@@ -9,6 +9,7 @@ jobs:
     strategy:
       matrix:
         targets: [
+          [arm64], # OCI alias
           [aarch64-linux-gnu], # linaro
           [aarch64_be-linux-gnu], # linaro
           [aarch64], # bootlin
