ci: rework powerpc workflows

--- a/.github/workflows/powerpc_toolchain.yml
+++ b/.github/workflows/powerpc_toolchain.yml
@@ -9,10 +9,13 @@ jobs:
     strategy:
       matrix:
         targets: [
+          [ppc], # alias
           [ppc-440fp],
           [ppc-e500mc],
-          [ppc64],
-          [ppc64le],
+          [ppc64], # OCI alias
+          [ppc64le], # OCI alias
+          [ppc64-power8],
+          [ppc64le-power8],
         ]
       fail-fast: false
     env:
