--- a/ci/docker/centos/Dockerfile
+++ b/ci/docker/centos/Dockerfile
@@ -1,7 +1,6 @@
 # Create a virtual environment with all tools installed
 # ref: https://quay.io/repository/centos/centos
 FROM quay.io/centos/centos:stream AS env
-LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
 RUN dnf -y update \
@@ -38,4 +37,4 @@ RUN cmake -S. -Bbuild
 RUN cmake --build build --target all -v
 
 FROM install_build AS install_test
-RUN cmake --build build --target test
+RUN cmake --build build --target test -v
