--- a/ci/docker/archlinux/Dockerfile
+++ b/ci/docker/archlinux/Dockerfile
@@ -1,7 +1,6 @@
 # Create a virtual environment with all tools installed
 # ref: https://hub.docker.com/_/archlinux/
 FROM archlinux:latest AS env
-LABEL maintainer="mizux.dev@gmail.com"
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
 RUN pacman -Syu --noconfirm git base-devel cmake
@@ -33,4 +32,4 @@ RUN cmake -S. -Bbuild
 RUN cmake --build build --target all -v
 
 FROM install_build AS install_test
-RUN cmake --build build --target test
+RUN cmake --build build --target test -v
