--- a/ci/docker/ubuntu/Dockerfile
+++ b/ci/docker/ubuntu/Dockerfile
@@ -1,12 +1,12 @@
 # Create a virtual environment with all tools installed
 # ref: https://hub.docker.com/_/ubuntu
-FROM ubuntu:rolling AS env
-LABEL maintainer="mizux.dev@gmail.com"
+FROM ubuntu:latest AS env
 # Install system build dependencies
 ENV PATH=/usr/local/bin:$PATH
-RUN apt-get update -q \
-&& DEBIAN_FRONTEND=noninteractive apt-get install -yq \
- git wget libssl-dev build-essential cmake \
+RUN apt update -q \
+&& DEBIAN_FRONTEND=noninteractive apt install -yq \
+ git wget libssl-dev \
+ build-essential cmake \
 && apt-get clean \
 && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
@@ -36,4 +36,4 @@ RUN cmake -S. -Bbuild
 RUN cmake --build build --target all -v
 
 FROM install_build AS install_test
-RUN cmake --build build --target test
+RUN cmake --build build --target test -v
