--- a/.github/workflows/mips64_toolchain.yml
+++ b/.github/workflows/mips64_toolchain.yml
@@ -1,6 +1,6 @@
 name: mips64 Toolchain
 
-on: [push, pull_request]
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   # Building using the github runner environement directly.
