--- a/FooBar/CMakeLists.txt
+++ b/FooBar/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(FooBar "")
+add_library(FooBar OBJECT)
 
 target_sources(FooBar
   PRIVATE
@@ -7,6 +7,8 @@ target_sources(FooBar
 target_include_directories(FooBar
   PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../Bar/include>
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../Foo/include>
     $<INSTALL_INTERFACE:include>)
 target_compile_features(FooBar PUBLIC cxx_std_20)
 set_target_properties(FooBar PROPERTIES
@@ -18,13 +20,9 @@ if(APPLE)
     INSTALL_RPATH "@loader_path")
 elseif(UNIX)
   set_target_properties(FooBar PROPERTIES
+    POSITION_INDEPENDENT_CODE ON
     INSTALL_RPATH "$ORIGIN")
 endif()
-target_link_libraries(FooBar
-  PRIVATE
-  ${PROJECT_NAMESPACE}::Foo
-  ${PROJECT_NAMESPACE}::Bar
-  )
 add_library(${PROJECT_NAMESPACE}::FooBar ALIAS FooBar)
 
 add_subdirectory(tests)
